Bump project to java 21